2010-08-14  "Adam C. Emerson" <azure@azureprime.com>

	* [w3m-dev 04390]
	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=573789
	* html.c: All elements have the id attribute.

2010-08-12  Peter J. R. Moulder

	* [w3m-dev 04384]
	* http://sourceforge.net/tracker/index.php?func=detail&aid=2987194&group_id=39518&atid=425441
	* html.c: some tags have ALST_NOP attribute
	* tagtable.tab: add <span> and </span>
	* html.h (HTML_SPAN, HTML_N_SPAN): added

2010-08-11  SAKAI Kiyotaka <kiyotaka.sakai@ntt-at.co.jp>

	* [w3m-dev 04381] Re: check socklen_t
	* ftp.c: fix condition (#ifndef HAVE_SOCKLEN_T)

2010-08-10  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04379] check socklen_t
	* configure.ac: check socklen_t
	* ftp.c (ftp_login, ftp_pasv): use socklen_t instead of int

2010-08-09  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04374] Re: "important" bugs from bugs.debian.org
	* table.c (feed_table_tag): don't show message when rowspan is greater than ATTR_ROWSPAN_MAX
	* [w3m-dev 04376] Re: "important" bugs from bugs.debian.org
	* table.c (feed_table_tag): fix indent

2010-08-08  Steven Harms <ZXB01226@nifty.com>

	* [w3m-dev 04371] Re: "important" bugs from bugs.debian.org
	* https://bugs.launchpad.net/ubuntu/+source/w3m/+bug/131993
	* table.c (ATTR_ROWSPAN_MAX): added
	(feed_table_tag): maximum value of rowspan is ATTR_ROWSPAN_MAX

2010-08-08  d+w3m@vdr.jp

	* [w3m-dev 04360] Re: "important" bugs from bugs.debian.org
	* main.c (main): use DEFAULT_COLS
	(main): the maximum value of the -cols option is MAXIMUM_COLS
	* backend.c (backend): use DEFAULT_COLS
	* fm.h (MAXIMUM_COLS, DEFAULT_COLS): added

2010-08-04  Ito Hiroyuki  <ZXB01226@nifty.com>

	* [w3m-dev 04369] Re: w3m's bugs from bugs.debian.org
	* terms.c (graph_ok): fix condition (UseGraphicChar != GRAPHIC_CHAR_DEC)
	* symbol.c (get_symbol): fix condition (UseGraphicChar != GRAPHIC_CHAR_ASCII)
	* rc.c (params1): type of graphic_char option is PI_SEL_C